# ftb2modpack

./: Cargo.toml  README.md  modpacks.json  pack-dw20.json  pack.json  release.sh
src/: ftb_modpacks.rs  ftb_pack.rs  main.rs  manifest.rs
