[package]
name = "ftb2modpack"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["tokio", "debug", "image"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
open = "5.2.0"
rfd = { version = "0.14.1", default-features = false, features = [
    "xdg-portal",
    "tokio",
] }
